--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
     
     <main>
         <section id="celular">
+            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
 
         </section>
         <section id="social">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebo"></a>
 
         </section>
     </main>
